; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_verify_seafile.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_verify_seafile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i8*, i32, i64, i64)* @verify_seafile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @verify_seafile(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %5
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call i64 @verify_fs_object_json(i8* %15, i8* %16, i32 %17)
  store i64 %18, i64* %6, align 8
  br label %25

19:                                               ; preds = %5
  %20 = load i8*, i8** %7, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %9, align 4
  %23 = load i64, i64* %10, align 8
  %24 = call i64 @verify_seafile_v0(i8* %20, i8* %21, i32 %22, i64 %23)
  store i64 %24, i64* %6, align 8
  br label %25

25:                                               ; preds = %19, %14
  %26 = load i64, i64* %6, align 8
  ret i64 %26
}

declare dso_local i64 @verify_fs_object_json(i8*, i8*, i32) #1

declare dso_local i64 @verify_seafile_v0(i8*, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
